objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>EX_Blue_Sheet_Required__c</fullName>
        <formula>OR ( AND (ISPICKVAL(EX_Blue_Sheet_Override__c, "Yes"),     
     mh_Associated_Blue_Sheet__c &lt;&gt; TRUE),
    AND(Probability &gt; 0.1,Amount &gt; 299999,CloseDate &lt; TODAY()+180,
        NOT ISPICKVAL(EX_Blue_Sheet_Override__c,"No"),
        mh_Associated_Blue_Sheet__c &lt;&gt; TRUE, RecordType.Name &lt;&gt;"EMS")
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If 300K or more, Stage 3 and up, and close within 180 days. 
Manager can also flag any opportunity to require a blue sheet.</inlineHelpText>
        <label>EX-Blue Sheet Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EX_Contract_Comments__c</fullName>
        <inlineHelpText>comments about contract status</inlineHelpText>
        <label>zz EX-Contract CommentsRETIRE</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EX_Contract_Priority__c</fullName>
        <description>Contract/Legal Priority</description>
        <inlineHelpText>number 1 being top, 99 being bottom blank = not applicable to indicate priority for Legal</inlineHelpText>
        <label>zzEX-Contract Priority Retire</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EX_EOM_CloseDate__c</fullName>
        <formula>/*If(CloseDate = DATE(Year(Today()),1,1)-1 , true,
If(CloseDate = DATE(Year(Today()),2,1)-1 , true,
IF(CloseDate = DATE(Year(Today()),3,1)-1 , true,
IF(CloseDate = DATE(Year(Today()),4,1)-1 , true,
IF(CloseDate = DATE(Year(Today()),5,1)-1 , true,
IF(CloseDate = DATE(Year(Today()),6,1)-1 , true,
IF(CloseDate = DATE(Year(Today()),7,1)-1 , true,
IF(CloseDate = DATE(Year(Today()),8,1)-1 , true,
IF(CloseDate = DATE(Year(Today()),9,1)-1 , true,
IF(CloseDate = DATE(Year(Today()),10,1)-1 , true,
IF(CloseDate = DATE(Year(Today()),11,1)-1 , true,
IF(CloseDate = DATE(Year(Today()),12,1)-1 , true,
false))))))))))))*/

if(CloseDate = (Date(Year(CloseDate),month(CloseDate)+1,1)-1),true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EX-EOM-CloseDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EX_Mgt_FCST__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allows management, only, to flag an opportunity as full upside for mgt forecast reporting purposes only.  Does not change the Mgt Forecast Flag so it does not change the predicted bookings or other outbound forecast reports</inlineHelpText>
        <label>EX-Mgt-FCST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EX_Mgt_Key_Deal_Auto__c</fullName>
        <formula>OR (
EX_Mgt_Key_Deal__c = TRUE,
AND ( This_Qtr_Opportunity__c = TRUE,  Amount &gt;= 200000, TEXT(Solution__c ) = "Physician Advisory Solutions",  RecordType.DeveloperName = "Modular"),
AND ( This_Qtr_Opportunity__c = TRUE,  Amount &gt;= 300000, RecordType.DeveloperName &lt;&gt; "Enterprise"),
AND ( Next_Quarter_Opportunity__c =TRUE, Amount &gt;= 500000,  RecordType.DeveloperName != "Enterprise"),
AND ( OR (This_Qtr_Opportunity__c = TRUE,Next_Quarter_Opportunity__c =TRUE), OR(IsPickVal(Mgmt_Forecast__c,"Commit"), FC__c &gt; 0),Amount &gt;=100000)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EX-Mgt Key Deal Auto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EX_Mgt_Key_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mgt Flag that this is a key deal for Exec reporting</inlineHelpText>
        <label>EX-Mgt Key Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EX_Needs_Cases__c</fullName>
        <description>assume if duration is one, this PAS is education and will have no cases</description>
        <formula>IF(  ISPICKVAL(Solution__c,"Physician Advisory Solutions") ,
   IF( AND (
    (RUR_Cases_per_Month__c + LOC_Cases_per_Month_Est__c + PTP_Cases_per_Month__c + Appeals_Cases_per_Month__c) &lt; 1,
     Duration__c &gt;1)
,TRUE,FALSE),FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EX-Needs Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hosted</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Mixed Product Set</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ex_SO_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag for sales operations notices</description>
        <label>Ex-SO Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exec_Comments_Last_Update__c</fullName>
        <inlineHelpText>Date Exec Comments Last Updated</inlineHelpText>
        <label>Exec Comments Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Comments__c</fullName>
        <inlineHelpText>Comments to show to execs and BOD</inlineHelpText>
        <label>Executive Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Rev_Yr_1__c</fullName>
        <formula>Amount_Yr_1__c *  Legacy_Stage_Pct_of_Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount (Year 1) x Probability</inlineHelpText>
        <label>Expected Rev - Yr 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FC__c</fullName>
        <formula>IF(OR(ISPICKVAL( Mgmt_Forecast__c ,"Commit"),  EX_Mgt_FCST__c = TRUE,IsWon),Amount,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FC$</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <inlineHelpText>Enter IMX fee percentage if not using a fee per unit</inlineHelpText>
        <label>Fee %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fee_per_Unit__c</fullName>
        <inlineHelpText>If not percentage-based, enter the fee per case / visit / transport, etc.</inlineHelpText>
        <label>Fee per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinalExpenseTotal__c</fullName>
        <label>Final/Paid Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Agrees_Upon_the_Big_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Someone in Finance (preferably an executive) either agrees with, or has modified, the Big Number.</description>
        <inlineHelpText>Has anyone in the finance department agreed upon (or modified) the Big Number?</inlineHelpText>
        <label>Finance Agrees Upon the Big Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_Current_Quarter__c</fullName>
        <description>forecast amount if close in this quarter EXCLUDING amounts already won</description>
        <formula>IF (YEAR(CloseDate)=Year(TODAY()),
  IF (CEILING( MONTH ( today()) / 3 ) = CEILING( MONTH ( CloseDate) / 3 ),
IF(IsWon,0,FC__c)
,0)
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Current Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Current_Year__c</fullName>
        <description>Forecast amount if current year</description>
        <formula>IF (YEAR(CloseDate)=Year(TODAY()), FC__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funnel_Type__c</fullName>
        <description>Set long or short funnel parameter</description>
        <formula>If(IsPickVal(StageName,"Target"),"Long",
  If(IsPickVal(StageName,"1-Discover"),"Long",   
    If(IsPickVal(StageName,"2-Qualify"),"Long",
      If(IsPickVal(StageName,"3-Execute"),"Long",
       If(IsPickVal(StageName,"4-Propose"),"Short",
        If(IsPickVal(StageName,"5-Close"),"Short","NA"))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funnel Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Gross_Margin__c</fullName>
        <formula>IF(Amount&gt;0,( Amount - Cost_of_Goods_Sold__c )/ Amount ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hardware Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hardware_Vendor_PO_Number__c</fullName>
        <defaultValue>"POSYST"</defaultValue>
        <label>Hardware Vendor PO Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Highest_Probability__c</fullName>
        <inlineHelpText>set by workflow, the highest probability achieved on this opp</inlineHelpText>
        <label>Highest Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Historical_Owner__c</fullName>
        <label>Historical Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>House_Account__c</fullName>
        <formula>if(Account.House_Account__c,True,
if(Account.Parent.House_Account__c,True,
if(Account.Parent.Parent.House_Account__c,True,
if(Account.Parent.Parent.Parent.House_Account__c,True,
if(Account.Parent.Parent.Parent.Parent.House_Account__c,Account.Parent.Parent.Parent.Parent.House_Account__c,False)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>House Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IMX_Core_Solution__c</fullName>
        <label>IMX Core Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>EMS: Core</fullName>
                </value>
                <value>
                    <fullName>EMS: Optima</fullName>
                </value>
                <value>
                    <fullName>Hospital Provider Services</fullName>
                </value>
                <value>
                    <fullName>Office Physician Services</fullName>
                </value>
                <value>
                    <fullName>Systems</fullName>
                </value>
                <value>
                    <fullName>Systems: Optima</fullName>
                </value>
                <value>
                    <fullName>Revenue Integrity</fullName>
                </value>
                <value>
                    <fullName>Condition Awareness - Sepsis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMX_Revenue_based__c</fullName>
        <formula>Annual_Volume__c * Revenue_per_Unit__c * Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual Volume * Rev/Unit * Fee %</inlineHelpText>
        <label>Calculated Revenue % Based</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMX_Revenue_fee_per_unit__c</fullName>
        <formula>Annual_Volume__c * Revenue_per_Unit__c *  Fee_per_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual Volume * Rev/Unit * Fee/ Unit</inlineHelpText>
        <label>Calculated Revenue Fee Based</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMX_System_Record_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IMX System Record Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import2_Id__c</fullName>
        <description>Id of the record in original system, where it was imported from by Import2.com</description>
        <externalId>true</externalId>
        <label>Import2 Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Incumbent_Group__c</fullName>
        <inlineHelpText>Legacy ED field</inlineHelpText>
        <label>Incumbent Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent_Vendor__c</fullName>
        <label>Incumbent Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>360 Medical Billing Solutions</fullName>
                </value>
                <value>
                    <fullName>3D Anesthesia Billing Service</fullName>
                </value>
                <value>
                    <fullName>4M Emergency Systems</fullName>
                </value>
                <value>
                    <fullName>911 EMS</fullName>
                </value>
                <value>
                    <fullName>911 Professional Billing</fullName>
                </value>
                <value>
                    <fullName>ABC (Anesthesia Business Consultants)</fullName>
                </value>
                <value>
                    <fullName>ABC Consulting L.L.C</fullName>
                </value>
                <value>
                    <fullName>Abeo</fullName>
                </value>
                <value>
                    <fullName>ABS Medical Management</fullName>
                </value>
                <value>
                    <fullName>Accordis/Apollo Health Street</fullName>
                </value>
                <value>
                    <fullName>Accumed</fullName>
                </value>
                <value>
                    <fullName>AccuPro Services, LTD</fullName>
                </value>
                <value>
                    <fullName>ACS State &amp; Local Solutions</fullName>
                </value>
                <value>
                    <fullName>Acute Care</fullName>
                </value>
                <value>
                    <fullName>Advanced Claims</fullName>
                </value>
                <value>
                    <fullName>Advanced Health Partners/MediCom/MedExcel</fullName>
                </value>
                <value>
                    <fullName>Advanced Revenue Management</fullName>
                </value>
                <value>
                    <fullName>Advantage Healthcare</fullName>
                </value>
                <value>
                    <fullName>AdvantEdge Healthcare Solutions</fullName>
                </value>
                <value>
                    <fullName>Aeromedical Collections Services (ACS)</fullName>
                </value>
                <value>
                    <fullName>Agreva Medical Billing</fullName>
                </value>
                <value>
                    <fullName>AIM/RAM</fullName>
                </value>
                <value>
                    <fullName>Alaska Billing Services</fullName>
                </value>
                <value>
                    <fullName>AmbCoach</fullName>
                </value>
                <value>
                    <fullName>AmbuPro</fullName>
                </value>
                <value>
                    <fullName>AMED</fullName>
                </value>
                <value>
                    <fullName>American Physician Partners</fullName>
                </value>
                <value>
                    <fullName>Amsol</fullName>
                </value>
                <value>
                    <fullName>AMS Solutions, Inc.</fullName>
                </value>
                <value>
                    <fullName>Andres Medical Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Generated_Explanation__c</fullName>
        <label>Interest Generated Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Generated__c</fullName>
        <description>Interest could come from cold call,web inquiry, referral, or prospecting, etc.</description>
        <inlineHelpText>Interest could come from cold call,web inquiry, referral, or prospecting, etc.</inlineHelpText>
        <label>Interest Generated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Milestones</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Lost_Reason__c</fullName>
        <label>Internal Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lack of access to buyers</fullName>
                </value>
                <value>
                    <fullName>Lack of a coach</fullName>
                </value>
                <value>
                    <fullName>The problem was not prioritized</fullName>
                </value>
                <value>
                    <fullName>No data related motivation</fullName>
                </value>
                <value>
                    <fullName>Lack of strategic fit (Walked)</fullName>
                </value>
                <value>
                    <fullName>Inability to make investment (Walked)</fullName>
                </value>
                <value>
                    <fullName>Admin Data Correction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reseller for the opportunity.  Only required if different than the Opportunity Account, or WebEOC License Holder.</inlineHelpText>
        <label>Invoice Partner (Reseller)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Invoice Partner)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Opportunity__c</fullName>
        <inlineHelpText>This field can only be edited by the corresponding business unit leader.</inlineHelpText>
        <label>Key Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Named</fullName>
                </value>
                <value>
                    <fullName>Upside</fullName>
                </value>
                <value>
                    <fullName>Systems Strategic</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOC_Cases_per_Month_Est__c</fullName>
        <description>The number of LOC cases per month.</description>
        <inlineHelpText>Estimate the number of Level of Care cases the client is planning to send per month. If the client has agreed to a minimum, your estimate should be at least the minimum.</inlineHelpText>
        <label>LOC Cases per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOC_Price_per_Case__c</fullName>
        <description>Price per LOC Case</description>
        <inlineHelpText>Enter the price per Level of Care case agreed to in the most recent discussions or contract proposals.</inlineHelpText>
        <label>LOC Price per Case</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <inlineHelpText>Select language required</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastActivityFlag__c</fullName>
        <formula>IF( IsClosed  = false,
IF(RecordType.DeveloperName !="Enterprise",
IF( 
OR(
   Today()-LastActivityDate &gt; 30,
    ISBLANK(LastActivityDate),
    Today()-LastActivityDate &gt; DaysinCurrentStage__c), 
Image("/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682M00000SG7jK&amp;operationContext=CHATTER&amp;contentId=05T2M00001rC260", "red"),
image("/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0682M00000SG7hb&amp;operationContext=CHATTER&amp;contentId=05T2M00001rC1yu", "green") )
,""),"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>LAF = Last Activity Flag.  Are we using activities on the opportunity well?  Flags if no activity date, or Last activity is more than 30 days ago, or if last activity is before this current stage)</inlineHelpText>
        <label>LAF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastStageChange__c</fullName>
        <label>LastStageChange</label>
        <summarizedField>Opportunity_History__c.Enter_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_History__c.Stage_change__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_History__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_PS_Status_Update__c</fullName>
        <label>Last PS Status Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <inlineHelpText>Please enter description of Trade Show, Webinar, or Partner</inlineHelpText>
        <label>Lead Source Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Campaign_Name__c</fullName>
        <inlineHelpText>Legacy ED field</inlineHelpText>
        <label>Legacy - Campaign Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Customers_Email__c</fullName>
        <inlineHelpText>Legacy ED field</inlineHelpText>
        <label>Legacy - Customer's Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Legacy_ED_Category__c</fullName>
        <label>Legacy - ED Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ED_Customer__c</fullName>
        <inlineHelpText>Legacy ED field</inlineHelpText>
        <label>Legacy - ED Customer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_EMS_Status__c</fullName>
        <label>Legacy - EMS Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Product_Family__c</fullName>
        <label>Legacy - Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CORES - ANS</fullName>
                </value>
                <value>
                    <fullName>CORES - CMS</fullName>
                </value>
                <value>
                    <fullName>CORES - HAN</fullName>
                </value>
                <value>
                    <fullName>CORES - RMS</fullName>
                </value>
                <value>
                    <fullName>EMCredential</fullName>
                </value>
                <value>
                    <fullName>EMRegistry</fullName>
                </value>
                <value>
                    <fullName>EMResource</fullName>
                </value>
                <value>
                    <fullName>EMResource HICS</fullName>
                </value>
                <value>
                    <fullName>EMStat</fullName>
                </value>
                <value>
                    <fullName>EMTrack</fullName>
                </value>
                <value>
                    <fullName>FireStat</fullName>
                </value>
                <value>
                    <fullName>FleetEyes</fullName>
                </value>
                <value>
                    <fullName>Inventory Management</fullName>
                </value>
                <value>
                    <fullName>Medical Dispatch</fullName>
                </value>
                <value>
                    <fullName>PAOS</fullName>
                </value>
                <value>
                    <fullName>Response Manager</fullName>
                </value>
                <value>
                    <fullName>Volunteer Mobilizer</fullName>
                </value>
                <value>
                    <fullName>WebCUR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Sales_Milestone__c</fullName>
        <label>Legacy Sales Milestone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Source__c</fullName>
        <label>Legacy Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Stage_Pct_of_Probability__c</fullName>
        <description>This formula assigns a value (stated as a percent) to a selected Legacy Stage.</description>
        <formula>IF(ISPICKVAL(Legacy_Stage__c, "None"), 0,
      IF(ISPICKVAL(Legacy_Stage__c, "Prospecting"), 5/100,
      IF(ISPICKVAL(Legacy_Stage__c, "Qualification"), 10/100,
      IF(ISPICKVAL(Legacy_Stage__c, "Needs Analysis"), 20/100,
      IF(ISPICKVAL(Legacy_Stage__c, "Proposal/Price Quote"), 30/100,
      IF(ISPICKVAL(Legacy_Stage__c, "Proposal in Review"), 50/100,
      IF(ISPICKVAL(Legacy_Stage__c, "Negotiation/Review"), 70/100,
      IF(ISPICKVAL(Legacy_Stage__c, "Contracting"), 85/100, 0)
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legacy Stage Pct of Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Legacy_Stage__c</fullName>
        <description>The purpose of Legendary Stage is to create a temporary fix that will facilitate the calculation of Expected Revenue in the system. The values in this picklist have been used with associated % of Probability values in the Stages field. They will be removed from the Stages field and accessed from this field.</description>
        <inlineHelpText>Select the Stage that has legendarily been used prior to using Sales Milestones. An entry is required to properly calculate Expected Revenue.</inlineHelpText>
        <label>Legacy Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Needs Analysis</fullName>
                </value>
                <value>
                    <fullName>Proposal/Price Quote</fullName>
                </value>
                <value>
                    <fullName>Proposal in Review</fullName>
                </value>
                <value>
                    <fullName>Negotiation/Review</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Systems_Product_Category__c</fullName>
        <label>Legacy - Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Interface</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>New Product</fullName>
                </value>
                <value>
                    <fullName>Paid Enhancement</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Tradeshow_Name__c</fullName>
        <label>Legacy - Tradeshow Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Type__c</fullName>
        <inlineHelpText>Systems field</inlineHelpText>
        <label>Legacy - Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>One-Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Resource_Assigned__c</fullName>
        <label>Legal Resource Assigned</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Holder_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this opportunity is part of a separate WebEOC license, please document that in this field</description>
        <inlineHelpText>Use this field to denote WebEOC License holder - leave BLANK if not a WebEOC opportunity, or if Account is already License Holder.</inlineHelpText>
        <label>WebEOC License Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Opportunities (Purchaser is not WebEOC License Holder)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_Comments__c</fullName>
        <inlineHelpText>This field is visible to executives and some board members.  Insert comments about the opportunity current status at the top of this field. Start with your initials, keep past comments, too, so we have running commentary.</inlineHelpText>
        <label>Sales Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Manager_Forecast_Amount__c</fullName>
        <label>Manager Forecast Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>